Fri Jan 11 11:57:36 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defines.h (WORDS_BIGENDIAN): honor __BIG_ENDIAN__ than the result of
	  configure.

	* dln.c: use dlopen on Mac OS X 10.3 or later.  backport from trunk.

	* lib/rdoc/options.rb (check_diagram): more precise check, darwin
	  is not Windows but minwg is on it.

Thu Jan 10 10:53:50 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_open_osfhandle): reverted to old definition.
	  [ ruby-Bugs-16948 ]

Tue Jan  8 20:02:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win{32,ce}/Makefile.sub: merged.

Sun Jan  6 09:39:02 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb, lib/date/format.rb: introduced some constants
	  (for internal use).

	* sample/cal.rb: trivial adjustments.

Fri Jan  4 23:08:48 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_arg): use converted object.  [ruby-core:14759]

Fri Jan  4 01:20:21 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32.h: only VC6 needs extern "C++" for math.h.  [ruby-talk:285660]

Thu Jan  3 11:28:58 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (fptr_finalize): clear errno first.  [ruby-talk:284492]

Wed Jan  2 10:18:56 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* sample/time.rb: use Process.times instead of Time.times.

Wed Jan  2 09:18:11 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* sample/goodfriday.rb: examples for date are enough.  retired.

Wed Jan  2 09:06:55 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* sample/cal.rb: just updated with the newest version.

Mon Dec 31 06:50:38 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* trunk/common.mk: not use -I$(srcdir)/lib with $(MINIRUBY) for cross
	  compiling.

	* configure.in, {win,bcc}32/Makefile.sub (MINIRUBY): -I$(srcdir)/lib
	  moved.

Sun Dec 30 22:48:37 2007  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (_valid_time?): I'm not sure to recommend such an
	  expression.  but anyway it is acceptable now.  [ruby-core:14580]
